--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "wikipedia==1.4.0", 
+    "pytest==9.0.2", 
+    "pytest-cov==7.0.0", 
+    "pylint==4.0.4", 
+    "black==25.12.0", 
+    "fire==0.7.1"
+]
