--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
 dev = [
     "pytest==9.0.2",
     "pytest-cov==7.0.0",
-    "ruff==0.5.0"
+    "ruff==0.5.0", 
+    "ipython"
 ]
