--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "uvicorn", 
     "wikipedia==1.4.0",
     "fire==0.7.1", 
-    "textblob", 
+    "textblob==0.19.0", 
 ]
 
 [dependency-groups]
@@ -17,6 +17,6 @@ dev = [
     "pytest==9.0.2",
     "pytest-cov==7.0.0",
     "ruff==0.5.0", 
-    "ipython", 
-    "httpx"
+    "ipython==8.38.0", 
+    "httpx==0.28.1"
 ]
